# nanoinfra-main

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: utils.py
core/configs/: __init__.py  train_base.yaml
core/data/: data_source.py  dist_sampler.py  mixed_dataloader.py  synthetic_loader.py
core/evaluation/: __init__.py  evaluator.py
core/model/: gpt.py  heads.py  system.py
core/tests/: test_checkpoint_meta.py  test_eval.py  test_heads.py  test_vocab_layout.py
core/tokenization/: __init__.py
core/training/: __init__.py  model_setup.py  trainer.py
exemplars/text_pretrain/: RESULTS.md  inference.py  inference_compare.md  provenance.md  scaling.py  spec.py
exemplars/text_pretrain/results/: bracket.json  samples.md  scaling.json
modalities/: assembler.py
modalities/text/: evaluator.py  fineweb.py  tokenizer.py  train_text.py
modalities/text/configs/: train_text.yaml
nanoinfra-main/core/: __init__.py
nanoinfra-main/core/data/: __init__.py  sequence_recipe.py  supervision.py
nanoinfra-main/core/evaluation/: eval_loss.py  loss_eval.py
nanoinfra-main/modalities/: __init__.py
projects/example_gpt2_vs_modern/: plot.py  spec.py
projects/example_moe/: plot.py  run.py  spec.py  test_dryrun.py  train_tokenizer.py  trunk.py
projects/example_residual_ablation/: plot.py  spec.py
projects/mlp_ratio_ablation/: README.md  run.py  spec.py
projects/myproject/: README.md  plot.py  run.py  spec.py  trunk.py
projects/yuze_example_ffn_expansion/: README.md  plot.py  run.py  run_all.sh  spec.py  trunk.py
scripts/: train_tokenizer.py
(+32 files in other folders)
