[project]
name = "nanoinfra"
version = "0.1.0"
description = "Modality-agnostic training infrastructure for decoder-only transformers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "torch",
    "numpy",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "rustbpe>=0.1.0",
    "datasets>=4.0.0",
    "huggingface_hub",
    "tqdm",
    "regex",
]

# Importable packages: `core` (mechanisms, zero-modality) and `modalities`
# (per-modality implementations + the assembler; core never imports it).
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modalities*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Soft dependencies — both are guarded imports, so the base install runs without
# them; add whichever you want:
#   wandb        experiment logging (Trainer no-ops to a DummyWandb without it)
#   liger-kernel fused cross-entropy kernel (guarded import in core/model/gpt.py)
[project.optional-dependencies]
wandb = ["wandb>=0.21.3"]
liger = ["liger-kernel"]
